force-app/main/default/objects/Company_Intranet__c/Company_Intranet__c.object-meta.xml
<CustomObject>
    <label>Intranet Company</label>
    <nameField>
        <label>Intranet Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intranet Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>