force-app/main/default/objects/Company_Intranet__c/fields/Global_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Global_Sales_Manager__c</fullName>
    <label>Global Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>