force-app/main/default/objects/Company_Intranet__c/fields/Market_Size__c.field-meta.xml
<CustomField>
    <fullName>Market_Size__c</fullName>
    <label>Market Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>