force-app/main/default/objects/Company_Intranet__c/fields/Number_of_Offices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Offices__c</fullName>
    <label>Number of Offices</label>
    <summaryForeignKey>Client_Office_Intranet__c.Company_Intranet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>