force-app/main/default/objects/Company_Intranet__c/listViews/All_Intranet_Companies.listView-meta.xml
<ListView>
    <fullName>All_Intranet_Companies</fullName>
    <columns>NAME</columns>
    <columns>Company_ID__c</columns>
    <columns>Number_of_Offices__c</columns>
    <columns>Type__c</columns>
    <columns>Tier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Intranet Companies</label>
</ListView>